20030912 doc/libspectrum.txt: bring general and snapshot routine
         documentation up to date.
20030912 doc/libspectrum.txt: document the RZX digital signature routines.
20030912 libspectrum.h.in, z80.c: move libspectrum_slt_type from
         libspectrum.h.in to z80.c.
20030912 doc/libspectrum.txt: document the tape routines.
20030912 ChangeLog, README: small doc updates for the 0.2.0 release.
20030913 Makefile.am: distribute generate.pl.in, tape_accessors.pl,
	 tape_set.pl and tape_block.h.
20030918 rzx.c: if count is zero in libspectrum_rzx_store_frame, don't
	 try to allocate zero bytes.
20030919 configure.in: link against glib, gcrypt and zlib if available
	 (Darren).
20030921 crypto.c, libspectrum.c, rzx.c: use libgcrypt 1.1.42.
20030922 crypto.c: use gcry_pk_testkey to test secret key sanity.
20030926 rzx.c: allow more than 1 repeated frame in a row.
20030926 rzx.c: port the rzx bugfixes from HEAD
	 (libspectrum_0_2_0-bugfix-branch)
20030926 ChangeLog, Makefile.am, README, configure.in: prepare for 0.2.0.1
	 release (libspectrum_0_2_0-bugfix-branch).
20030928 rzx.c: more bugfix (libspectrum_0_2_0-bugfix-branch).
20030930 ChangeLog, README: put in release date for 0.2.0.1
	 (libspectrum_0_2_0-bugfix-branch).
20031001 ChangeLog, Makefile.am, README, configure.in, rzx.c: port the
	 0.2.0.1 release changes back to HEAD.
20031003 make-perl.c: change GcryMPI to gcry_mpi_t.
20031006 crypto.c, rzx.c: use gcrypt errors properly; most importantly in
	 crypto.c:libspectrum_verify_signature, we have to ignore the
	 error source before comparing with an error code.
20031006 z80.c: actually allocate memory for the .slt pages; thanks to
	 Alberto Garcia for reporting this.
20031009 creator.c, libspectrum.h.in, rzx.c, szx.c: add support for
	 writing custom data in the creator blocks.
20031013 libspectrum.c, libspectrum.h.in: add routines to check
	 libspectrum's version.
20031013 libspectrum.c, libspectrum.h.in: add routines to get the version
	 of libgcrypt in use.