@@ -13,6 +13,7 @@
 /generate.pl
 /libspectrum.h
 /libspectrum.la
+/libspectrum.qpg
 /libtool
 /make-perl
 /snap_accessors.c
