@@ -102,4 +102,5 @@ dnl built
 dnl FIXME: is there a better way to do this?
 rm -rf libspectrum.h
 
-AC_OUTPUT(Makefile)
+AC_OUTPUT(Makefile \
+libspectrum.qpg)
