@@ -111,3 +111,5 @@ hacking/ChangeLog: the small scale changelog for libspectrum
 	 libspectrum's version.
 20031013 libspectrum.c, libspectrum.h.in: add routines to get the version
 	 of libgcrypt in use.
+20031014 .cvsignore, configure.in, libspectrum.qpg.in: add QNX package
+	 file (thanks, Mike Gorchak).
